fix: add spacing between icon & text
...in "back"-link

--- a/assets/styles/blocks/back.css
+++ b/assets/styles/blocks/back.css
@@ -11,6 +11,7 @@
   transition: opacity 250ms ease;
   text-decoration: none;
   line-height: 1;
+  user-select: none;
 }
 
 .back__link:hover,
@@ -19,6 +20,6 @@
   text-decoration: underline;
 }
 
-back__link .icon--chevron-left {
-  margin-right: 0.5rem; /* 8 / 16 */
+.back__link .icon--chevron-left {
+  margin-right: 0.375rem; /* 6 / 16 */
 }
